[package]
name = "zyou_htmltopdf"
version = "0.1.0"
edition = "2024"
authors = ["Alexandre Ducros <Alexandre.ducros@aquioi.com>"]
description = "A Rust library to convert HTML to PDF"
license = "MIT"
repository = "https://github.com/zyouax/zyou_htmltopdf"
keywords = ["html", "pdf", "converter", "rust", "zyouax"]
categories = ["text-processing", "rendering"]
exclude = ["input.html", "output/*"]

[dependencies]
image = "0.25.6"
font-kit = "0.14.3"